Increased MaxPermSize for test to keep from running out of permanent generation memory